<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rsain.pregnancycheese.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="fill_vertical|fill_horizontal"
            android:gravity="center_vertical|fill_vertical"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/introduction"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:singleLine="false"
                    android:text="@string/informationOfUse"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteY="1dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="2dp"
                    android:clickable="true"
                    android:cropToPadding="false"
                    android:src="@drawable/question"
                    app:backgroundTint="@android:color/background_light"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/question" android:focusable="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="40dp">

                <TextView
                    android:id="@+id/lblPasteurized"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pasteurizedMilk"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/toggleButtonPasteurized"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textAlignment="center"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center_vertical"
                android:orientation="horizontal"
                android:paddingTop="40dp">

                <TextView
                    android:id="@+id/lblMilkFat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/milkFat"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerMilkFat"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:popupBackground="@android:color/white"
                    android:scrollbars="vertical"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal"
                android:paddingTop="40dp">

                <TextView
                    android:id="@+id/lblMoisture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/moisture"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerMoisture"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center_vertical|end"
                    android:isScrollContainer="true"
                    android:popupBackground="@android:color/white"
                    android:scrollbars="vertical"
                    android:splitMotionEvents="true"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewResult"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/imageError"
                    android:src="@drawable/info"
                    app:srcCompat="@drawable/info" />

                <TextView
                    android:id="@+id/textViewResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="150dp"
                    android:gravity="center_vertical"
                    android:text="@string/fillFields"
                    android:textAllCaps="true"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
